# sentra

./: .env.example  .gitignore  Cargo.toml  LICENSE  NOTICE  PLAN-seccomp-profiles.md  README.md  claude.md  execwall-oracle.md  install.sh  memory.md  policy.yaml
.github/workflows/: ci.yml  release.yml
docs/: EXECWALL_ONE_PAGER.md  INTEGRATION_TEST_PLAN.md  ORACLE_CLOUD_DEPLOYMENT.md  SECCOMP_PROFILES.md  SOCIAL_MEDIA_POSTS.md  execwall-landing.html
docs/plans/: 2025-02-23-cloud-test-plan.md  2025-02-23-openrouter-adapter-design.md  2026-02-28-agentexw-cli-watchdog.md  2026-02-28-agentexw-independent.md  2026-02-28-claude-agent-sdk-execwall.md
execwall-or-gate/: README.md  __init__.py  config.py  main.py  requirements.txt  spend.py
profiles/: python_sandbox_v1.seccomp.json  python_sandbox_v1.yaml
schema/: agentexw.sql
scripts/: deploy-agentexw.sh  email  execwall-shell  install-agentexw.sh  install-oracle-cloud.sh  launch_openclaw_isolated.sh  send-email  sentra-shell
sentra-or-gate/: README.md  __init__.py  config.py  main.py  mock_openrouter.py  router.py
src/: api.rs  audit.rs  cgroup.rs  context.rs  lib.rs  main.rs  namespace.rs  policy.rs  rate_limit.rs  sandbox.rs  seccomp.rs  seccomp_profile.rs  user.rs
systemd/: agentexw-listener.service  agentexw-watcher.path  agentexw-watcher.service  agentexw.service  calendar-svc.service  email-svc.service  whatsapp-svc.service
tests/: sandbox_integration.rs
tools/: add_reminder  add_task  cal_add  cal_list  email_check  email_send  recall  remember  wa_send  websearch
