[package]
name = "execwall"
version = "1.0.1"
edition = "2021"
description = "Execwall - Execution Firewall for AI Agents"
authors = ["Sundar Subramaniam"]
license = "Apache-2.0"
repository = "https://github.com/sundarsub/execwall"
keywords = ["security", "shell", "policy", "governance", "audit", "sandbox", "ai-agent"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "execwall"
path = "src/lib.rs"

[[bin]]
name = "execwall"
path = "src/main.rs"

[[bin]]
name = "python_runner"
path = "src/bin/python_runner.rs"

[[bin]]
name = "openclaw_launcher"
path = "src/bin/openclaw_launcher.rs"

[[bin]]
name = "agentexw"
path = "src/bin/agentexw.rs"

[[bin]]
name = "agentexw-listener"
path = "src/bin/agentexw_listener.rs"

[[bin]]
name = "whatsapp-svc"
path = "src/bin/whatsapp_svc.rs"

[[bin]]
name = "email-svc"
path = "src/bin/email_svc.rs"

[[bin]]
name = "calendar-svc"
path = "src/bin/calendar_svc.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Pattern matching
regex = "1.10"

# CLI
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
# Pin home crate to avoid edition2024 requirement
home = "=0.5.9"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# System info
hostname = "0.4"
users = "0.11"

# Output formatting
colored = "2.1"

# UUID for session tracking
uuid = { version = "1.7", features = ["v4"] }

# NEW: API mode
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "time", "process", "sync", "macros"] }

# NEW: Code hashing for audit
sha2 = "0.10"

# AgentExW dependencies
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6.1"
signal-hook = "0.3"
ureq = { version = "2.9", features = ["json"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Sandbox infrastructure (Linux-only)
nix = { version = "0.28", features = ["mount", "sched", "signal", "process", "user", "fs"] }
caps = "0.5"
libseccomp = "0.3"
# Systemd watchdog support
sd-notify = "0.4"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
strip = true
